# tabular-data-gen

./: .gitignore  LICENSE  README.md  download_papers.py  pyproject.toml  requirements.txt
configs/: full.yaml  smoke.yaml
plans/: README.md  deep-implementation-guide.md  gapA-sae-tfm.md  gapB-steertab.md  gapC-memtrace.md  gapD-clinsteer.md  real-tabpfn-findings.md
referred-papers/: INDEX.md
scripts/: _common.py  run_all_smoke.py
src/tabsae/: __init__.py  activations.py  pipeline.py  tabpfn_hooks.py  types.py
src/tabsae/generate/: __init__.py  energy.py  eval_gen.py  sgld.py  steer.py
src/tabsae/interp/: __init__.py  autointerp.py  baselines.py  causal.py  concept_align.py
src/tabsae/sae/: __init__.py  io.py  metrics.py  models.py  train.py
src/tabsae/scm/: __init__.py  concepts.py  generators.py
src/tabsae/utils/: __init__.py  device.py  io.py  logging.py  seed.py
tests/: conftest.py  test_backend_mock.py  test_io.py  test_pipeline_smoke.py  test_sae.py  test_scm.py
